# Personal-Website

./: Makefile  README.md
html_design/: .gitignore  .tsconfig.json  README.md  gulpfile.js  package-lock.json  package.json  tsconfig.json
html_design/src/copy/: about.html  contact.html  index.html
html_design/src/js/: testimonial.js
html_design/src/sass/: main.scss
html_design/src/ts/: skills.ts  testimon.ts
umitde/: README.md  next.config.js  package.json
umitde-backend/: package.json
umitde-backend/src/email/: email.controller.ts  email.model.ts  email.service.ts
umitde/components/: layout.tsx
umitde/components/layout/: layout.tsx
umitde/components/testimonials/: testimonials.component.tsx
umitde/components/translate/: change-lang-btn.tsx
umitde/locales/: en.js  en.ts  tr.js  tr.ts
umitde/locales/about/: en.ts  tr.ts
umitde/locales/contact/: en.ts  tr.ts
umitde/locales/home/: en.ts  tr.ts
umitde/locales/portfolio/: en.ts  tr.ts
umitde/pages/: _app.tsx  index.tsx
umitde/pages/about/: deneme.css  index.tsx
umitde/pages/api/: contact.ts
umitde/pages/contact/: contact.types.ts  index.tsx
umitde/pages/portfolio/: index.tsx
umitde/public/: contact.html  index.html
umitde/public/css/: custom.css
umitde/public/js/: main.js  main.polyfills.js  run.js  skills.js  testimon.js  testimonial.js
umitde/types/: contact.types.ts
umitde/utils/about/: gsap_anim.ts  run.ts
umitde/utils/contact/: gsap_anims.ts  send_email.ts
umitde/utils/home/: gsap_anims.ts
umitde/utils/portfolio/: gsap_anim.ts
umitde_backend/: pyproject.toml
(+30 files in other folders)
