[tool.poetry]
name = "umitde_backend"
version = "0.1.0"
description = ""
authors = ["umtdemr <umitde692@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
fastapi-mail = "^0.4.1"
uvicorn = "^0.15.0"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
